nodes/mc/gomc/src/mc/route/parser.output

state 0
	$accept: .route $end 

	IDENT  shift 3
	.  error

	route  goto 1
	node  goto 2

state 1
	$accept:  route.$end 

	$end  accept
	.  error


state 2
	route:  node.'>' node 
	route:  node.'<' node 
	route:  node.'<' '>' node 
	route:  node.'>' transforms 

	'<'  shift 5
	'>'  shift 4
	.  error


state 3
	node:  IDENT.    (5)
	node:  IDENT.'/' IDENT 

	'/'  shift 6
	.  reduce 5 (src line 95)


state 4
	route:  node '>'.node 
	route:  node '>'.transforms 

	IDENT  shift 3
	'?'  shift 10
	'%'  shift 11
	'='  shift 12
	.  error

	node  goto 7
	transforms  goto 8
	transform  goto 9

state 5
	route:  node '<'.node 
	route:  node '<'.'>' node 

	IDENT  shift 3
	'>'  shift 14
	.  error

	node  goto 13

state 6
	node:  IDENT '/'.IDENT 

	IDENT  shift 15
	.  error


state 7
	route:  node '>' node.    (1)

	.  reduce 1 (src line 57)


state 8
	route:  node '>' transforms.    (4)

	.  reduce 4 (src line 82)


state 9
	transforms:  transform.'>' node 
	transforms:  transform.'>' transforms 

	'>'  shift 16
	.  error


state 10
	transform:  '?'.transform_filter 
	transform:  '?'.transform_filter '%' transform_edit 
	transform:  '?'.transform_filter '=' transform_replace 

	IDENT  shift 19
	'{'  shift 18
	.  error

	transform_filter  goto 17

state 11
	transform:  '%'.transform_edit 

	IDENT  shift 22
	'{'  shift 21
	.  error

	transform_edit  goto 20

state 12
	transform:  '='.transform_replace 

	IDENT  shift 25
	'{'  shift 24
	.  error

	transform_replace  goto 23

state 13
	route:  node '<' node.    (2)

	.  reduce 2 (src line 65)


state 14
	route:  node '<' '>'.node 

	IDENT  shift 3
	.  error

	node  goto 26

state 15
	node:  IDENT '/' IDENT.    (6)

	.  reduce 6 (src line 99)


state 16
	transforms:  transform '>'.node 
	transforms:  transform '>'.transforms 

	IDENT  shift 3
	'?'  shift 10
	'%'  shift 11
	'='  shift 12
	.  error

	node  goto 27
	transforms  goto 28
	transform  goto 9

state 17
	transform:  '?' transform_filter.    (9)
	transform:  '?' transform_filter.'%' transform_edit 
	transform:  '?' transform_filter.'=' transform_replace 

	'%'  shift 29
	'='  shift 30
	.  reduce 9 (src line 117)


state 18
	transform_filter:  '{'.expr '}' 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 31

state 19
	transform_filter:  IDENT.'{' expr '}' 
	transform_filter:  IDENT.    (16)

	'{'  shift 43
	.  reduce 16 (src line 171)


state 20
	transform:  '%' transform_edit.    (10)

	.  reduce 10 (src line 124)


state 21
	transform_edit:  '{'.script '}' 

	IDENT  shift 49
	VAR  shift 47
	DEL  shift 48
	THIS  shift 50
	.  error

	script  goto 44
	dstexpr  goto 46
	stmt  goto 45

state 22
	transform_edit:  IDENT.'{' script '}' 

	'{'  shift 51
	.  error


state 23
	transform:  '=' transform_replace.    (11)

	.  reduce 11 (src line 131)


state 24
	transform_replace:  '{'.mapexprs '}' 

	IDENT  shift 53
	.  error

	mapexprs  goto 52

state 25
	transform_replace:  IDENT.'{' mapexprs '}' 
	transform_replace:  IDENT.    (19)

	'{'  shift 54
	.  reduce 19 (src line 193)


state 26
	route:  node '<' '>' node.    (3)

	.  reduce 3 (src line 73)


state 27
	transforms:  transform '>' node.    (7)

	.  reduce 7 (src line 104)


state 28
	transforms:  transform '>' transforms.    (8)

	.  reduce 8 (src line 110)


state 29
	transform:  '?' transform_filter '%'.transform_edit 

	IDENT  shift 22
	'{'  shift 21
	.  error

	transform_edit  goto 55

state 30
	transform:  '?' transform_filter '='.transform_replace 

	IDENT  shift 25
	'{'  shift 24
	.  error

	transform_replace  goto 56

state 31
	transform_filter:  '{' expr.'}' 
	expr:  expr.'~' expr 
	expr:  expr.'?' expr ':' expr 
	expr:  expr.EXP expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	AND  shift 73
	OR  shift 74
	EQ  shift 69
	NE  shift 70
	LE  shift 72
	GE  shift 71
	EXP  shift 60
	'?'  shift 59
	'%'  shift 68
	'}'  shift 57
	'['  shift 78
	'<'  shift 76
	'>'  shift 75
	'+'  shift 61
	'-'  shift 62
	'*'  shift 63
	'/'  shift 64
	'&'  shift 65
	'|'  shift 66
	'^'  shift 67
	'~'  shift 58
	'.'  shift 77
	.  error


state 32
	expr:  NUMBER.    (35)

	.  reduce 35 (src line 287)


state 33
	expr:  TRUE.    (36)

	.  reduce 36 (src line 294)


state 34
	expr:  FALSE.    (37)

	.  reduce 37 (src line 300)


state 35
	expr:  '{'.mapexprs '}' 

	IDENT  shift 53
	.  error

	mapexprs  goto 79

state 36
	expr:  '['.listexprs ']' 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 81
	listexprs  goto 80

state 37
	expr:  IDENT.'(' listexprs ')' 
	expr:  IDENT.'(' ')' 
	varexpr:  IDENT.    (72)

	'('  shift 82
	.  reduce 72 (src line 517)


state 38
	expr:  STRING.    (42)

	.  reduce 42 (src line 332)


state 39
	expr:  '-'.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 83

state 40
	expr:  '('.expr ')' 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 84

state 41
	expr:  varexpr.    (47)

	.  reduce 47 (src line 360)


state 42
	expr:  '!'.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 85

state 43
	transform_filter:  IDENT '{'.expr '}' 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 86

state 44
	transform_edit:  '{' script.'}' 

	'}'  shift 87
	.  error


state 45
	script:  stmt.    (22)
	script:  stmt.script 

	IDENT  shift 49
	VAR  shift 47
	DEL  shift 48
	THIS  shift 50
	.  reduce 22 (src line 216)

	script  goto 88
	dstexpr  goto 46
	stmt  goto 45

state 46
	stmt:  dstexpr.'=' expr ';' 
	stmt:  dstexpr.AE expr ';' 
	stmt:  dstexpr.OE expr ';' 
	stmt:  dstexpr.XE expr ';' 
	stmt:  dstexpr.PE expr ';' 
	stmt:  dstexpr.ME expr ';' 
	stmt:  dstexpr.TE expr ';' 
	stmt:  dstexpr.DE expr ';' 
	stmt:  dstexpr.RE expr ';' 
	dstexpr:  dstexpr.'[' expr ']' 
	dstexpr:  dstexpr.'.' IDENT 

	PE  shift 93
	ME  shift 94
	TE  shift 95
	DE  shift 96
	RE  shift 97
	AE  shift 90
	OE  shift 91
	XE  shift 92
	'='  shift 89
	'['  shift 98
	'.'  shift 99
	.  error


state 47
	stmt:  VAR.IDENT ';' 

	IDENT  shift 100
	.  error


state 48
	stmt:  DEL.IDENT ';' 

	IDENT  shift 101
	.  error


state 49
	dstexpr:  IDENT.    (73)

	.  reduce 73 (src line 522)


state 50
	dstexpr:  THIS.    (74)

	.  reduce 74 (src line 528)


state 51
	transform_edit:  IDENT '{'.script '}' 

	IDENT  shift 49
	VAR  shift 47
	DEL  shift 48
	THIS  shift 50
	.  error

	script  goto 102
	dstexpr  goto 46
	stmt  goto 45

state 52
	transform_replace:  '{' mapexprs.'}' 

	'}'  shift 103
	.  error


state 53
	mapexprs:  IDENT.':' expr 
	mapexprs:  IDENT.':' expr ',' mapexprs 

	':'  shift 104
	.  error


state 54
	transform_replace:  IDENT '{'.mapexprs '}' 

	IDENT  shift 53
	.  error

	mapexprs  goto 105

state 55
	transform:  '?' transform_filter '%' transform_edit.    (12)

	.  reduce 12 (src line 138)


state 56
	transform:  '?' transform_filter '=' transform_replace.    (13)

	.  reduce 13 (src line 147)


state 57
	transform_filter:  '{' expr '}'.    (14)

	.  reduce 14 (src line 157)


state 58
	expr:  expr '~'.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 106

state 59
	expr:  expr '?'.expr ':' expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 107

state 60
	expr:  expr EXP.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 108

state 61
	expr:  expr '+'.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 109

state 62
	expr:  expr '-'.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 110

state 63
	expr:  expr '*'.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 111

state 64
	expr:  expr '/'.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 112

state 65
	expr:  expr '&'.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 113

state 66
	expr:  expr '|'.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 114

state 67
	expr:  expr '^'.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 115

state 68
	expr:  expr '%'.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 116

state 69
	expr:  expr EQ.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 117

state 70
	expr:  expr NE.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 118

state 71
	expr:  expr GE.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 119

state 72
	expr:  expr LE.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 120

state 73
	expr:  expr AND.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 121

state 74
	expr:  expr OR.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 122

state 75
	expr:  expr '>'.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 123

state 76
	expr:  expr '<'.expr 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 124

state 77
	varexpr:  expr '.'.IDENT 

	IDENT  shift 125
	.  error


state 78
	varexpr:  expr '['.expr ']' 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 126

state 79
	expr:  '{' mapexprs.'}' 

	'}'  shift 127
	.  error


state 80
	expr:  '[' listexprs.']' 

	']'  shift 128
	.  error


state 81
	expr:  expr.'~' expr 
	expr:  expr.'?' expr ':' expr 
	expr:  expr.EXP expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	listexprs:  expr.    (68)
	listexprs:  expr.',' listexprs 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	AND  shift 73
	OR  shift 74
	EQ  shift 69
	NE  shift 70
	LE  shift 72
	GE  shift 71
	EXP  shift 60
	'?'  shift 59
	'%'  shift 68
	'['  shift 78
	'<'  shift 76
	'>'  shift 75
	'+'  shift 61
	'-'  shift 62
	'*'  shift 63
	'/'  shift 64
	'&'  shift 65
	'|'  shift 66
	'^'  shift 67
	'~'  shift 58
	'.'  shift 77
	','  shift 129
	.  reduce 68 (src line 491)


state 82
	expr:  IDENT '('.listexprs ')' 
	expr:  IDENT '('.')' 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	')'  shift 131
	.  error

	varexpr  goto 41
	expr  goto 81
	listexprs  goto 130

state 83
	expr:  expr.'~' expr 
	expr:  expr.'?' expr ':' expr 
	expr:  '-' expr.    (45)
	expr:  expr.EXP expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'['  shift 78
	'.'  shift 77
	.  reduce 45 (src line 350)


state 84
	expr:  expr.'~' expr 
	expr:  expr.'?' expr ':' expr 
	expr:  '(' expr.')' 
	expr:  expr.EXP expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	AND  shift 73
	OR  shift 74
	EQ  shift 69
	NE  shift 70
	LE  shift 72
	GE  shift 71
	EXP  shift 60
	'?'  shift 59
	'%'  shift 68
	'['  shift 78
	'<'  shift 76
	'>'  shift 75
	'+'  shift 61
	'-'  shift 62
	'*'  shift 63
	'/'  shift 64
	'&'  shift 65
	'|'  shift 66
	'^'  shift 67
	'~'  shift 58
	'.'  shift 77
	')'  shift 132
	.  error


state 85
	expr:  expr.'~' expr 
	expr:  expr.'?' expr ':' expr 
	expr:  expr.EXP expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  '!' expr.    (63)
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'['  shift 78
	'.'  shift 77
	.  reduce 63 (src line 454)


state 86
	transform_filter:  IDENT '{' expr.'}' 
	expr:  expr.'~' expr 
	expr:  expr.'?' expr ':' expr 
	expr:  expr.EXP expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	AND  shift 73
	OR  shift 74
	EQ  shift 69
	NE  shift 70
	LE  shift 72
	GE  shift 71
	EXP  shift 60
	'?'  shift 59
	'%'  shift 68
	'}'  shift 133
	'['  shift 78
	'<'  shift 76
	'>'  shift 75
	'+'  shift 61
	'-'  shift 62
	'*'  shift 63
	'/'  shift 64
	'&'  shift 65
	'|'  shift 66
	'^'  shift 67
	'~'  shift 58
	'.'  shift 77
	.  error


state 87
	transform_edit:  '{' script '}'.    (20)

	.  reduce 20 (src line 201)


state 88
	script:  stmt script.    (23)

	.  reduce 23 (src line 221)


state 89
	stmt:  dstexpr '='.expr ';' 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 134

state 90
	stmt:  dstexpr AE.expr ';' 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 135

state 91
	stmt:  dstexpr OE.expr ';' 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 136

state 92
	stmt:  dstexpr XE.expr ';' 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 137

state 93
	stmt:  dstexpr PE.expr ';' 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 138

state 94
	stmt:  dstexpr ME.expr ';' 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 139

state 95
	stmt:  dstexpr TE.expr ';' 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 140

state 96
	stmt:  dstexpr DE.expr ';' 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 141

state 97
	stmt:  dstexpr RE.expr ';' 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 142

state 98
	dstexpr:  dstexpr '['.expr ']' 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 143

state 99
	dstexpr:  dstexpr '.'.IDENT 

	IDENT  shift 144
	.  error


state 100
	stmt:  VAR IDENT.';' 

	';'  shift 145
	.  error


state 101
	stmt:  DEL IDENT.';' 

	';'  shift 146
	.  error


state 102
	transform_edit:  IDENT '{' script.'}' 

	'}'  shift 147
	.  error


state 103
	transform_replace:  '{' mapexprs '}'.    (17)

	.  reduce 17 (src line 179)


state 104
	mapexprs:  IDENT ':'.expr 
	mapexprs:  IDENT ':'.expr ',' mapexprs 

	IDENT  shift 37
	NUMBER  shift 32
	STRING  shift 38
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	'-'  shift 39
	'!'  shift 42
	'('  shift 40
	.  error

	varexpr  goto 41
	expr  goto 148

state 105
	transform_replace:  IDENT '{' mapexprs.'}' 

	'}'  shift 149
	.  error


state 106
	expr:  expr.'~' expr 
	expr:  expr '~' expr.    (43)
	expr:  expr.'?' expr ':' expr 
	expr:  expr.EXP expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	EXP  shift 60
	'%'  shift 68
	'['  shift 78
	'+'  shift 61
	'-'  shift 62
	'*'  shift 63
	'/'  shift 64
	'.'  shift 77
	.  reduce 43 (src line 338)


state 107
	expr:  expr.'~' expr 
	expr:  expr.'?' expr ':' expr 
	expr:  expr '?' expr.':' expr 
	expr:  expr.EXP expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	AND  shift 73
	OR  shift 74
	EQ  shift 69
	NE  shift 70
	LE  shift 72
	GE  shift 71
	EXP  shift 60
	'?'  shift 59
	'%'  shift 68
	'['  shift 78
	'<'  shift 76
	'>'  shift 75
	':'  shift 150
	'+'  shift 61
	'-'  shift 62
	'*'  shift 63
	'/'  shift 64
	'&'  shift 65
	'|'  shift 66
	'^'  shift 67
	'~'  shift 58
	'.'  shift 77
	.  error


state 108
	expr:  expr.'~' expr 
	expr:  expr.'?' expr ':' expr 
	expr:  expr.EXP expr 
	expr:  expr EXP expr.    (48)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'['  shift 78
	'.'  shift 77
	.  reduce 48 (src line 364)


state 109
	expr:  expr.'~' expr 
	expr:  expr.'?' expr ':' expr 
	expr:  expr.EXP expr 
	expr:  expr.'+' expr 
	expr:  expr '+' expr.    (49)
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	EXP  shift 60
	'%'  shift 68
	'['  shift 78
	'*'  shift 63
	'/'  shift 64
	'.'  shift 77
	.  reduce 49 (src line 370)

